Segundo título do site

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     
     <h1>Título</h1>
 
+    <h2>Título feito por outra pessoa</h2>
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quas doloribus explicabo modi impedit quasi quidem eum obcaecati totam beatae? Dolorum voluptas impedit sequi, rem veritatis molestias perspiciatis molestiae eos.</p>
     
 </body>
